# pgserver-trgm

./: README.md  pyproject.toml  setup.py
.github/workflows/: build-and-test.yml
pgbuild/: Makefile
src/pgserver/: _commands.py
tests/: test_pgserver.py
